--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <title>ExamEase v2</title>
+    <title>ExamEase</title>
 </head>
 <body>
 
 <div class="container mt-5">
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
 
 </body>
